# dirhive

./: .gitignore  .jjignore  Cargo.toml  LICENSE  README.md
docs/: design.md  operations.md  requirements.md
docs/schema/: pending-entry.v1.tombstone.json  pending-entry.v1.upsert.json
plugin/: .mcp.json  README.md  verify.sh
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/.codex-plugin/: plugin.json
plugin/commands/: accept.md  allow-peer.md  invite.md  peers.md  pending.md  revoke.md  setup-doctor.md  status.md
plugin/scripts/: install.sh
plugin/skills/sync/: SKILL.md
sandbox/scripts/: 2peer-smoke.sh  3peer-smoke.sh  install-smoke.sh
sandbox/scripts/launchd/: README.md  com.user.dirhive.plist.template  com.user.p2p-dir-sync.plist.template  install-launchd.sh  uninstall-launchd.sh
sandbox/scripts/launchd/lib/: render-plist.py
sandbox/scripts/lib/: mcp_probe.py  rpc.py
src/: allowlist.rs  allowlist_blobs.rs  bootstrap_peers.rs  conflict.rs  keystore.rs  lib.rs  message.rs  paths.rs  pending_log.rs  receive.rs  runtime.rs  send.rs  state.rs  watcher.rs
src/daemon/: client.rs  dispatch.rs  listener.rs  mod.rs  state.rs
tests/: daemon_smoke.rs  pending_schema.rs  two_peer_sync.rs
