[package]
name = "p2p-dir-sync"
version = "0.1.0"
edition = "2024"
description = "P2P directory sync daemon + MCP server"
license = "MIT"

# ------------------------------------------------------------------------
# Iroh 系 crate のバージョン対応表 (= design.md §12 Q7 で固定):
#
#   iroh         = 0.98.1
#   iroh-base    = 0.98.0
#   iroh-gossip  = 0.98.0   (iroh ^0.98 を要求)
#   iroh-tickets = 0.5.0    (iroh-base ^0.98 を要求)
#   iroh-blobs   = 0.100.0  (iroh ^0.98 を要求) ← 番号だけ 0.100 だが 0.98 系と組む
#
# Phase 1B (refactor、旧 iroh-wiki-sync 経験) で iroh-docs 依存は削除済。
# 本 project は gossip + blobs 構成のみ。
# ------------------------------------------------------------------------

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
blake3 = "1.8.4"
clap = { version = "4.6.1", features = ["derive"] }
futures-lite = "2.6"
iroh = "0.98.1"
iroh-base = "0.98.0"
iroh-blobs = "0.100.0"
iroh-gossip = "0.98.0"
iroh-tickets = "0.5.0"
notify = "8.2.0"
notify-debouncer-full = "0.7"
# MCP server framework (= bin/p2p-sync-mcp.rs)
rmcp = { version = "1.6", features = ["transport-io"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[[bin]]
name = "p2p-sync"
path = "src/bin/p2p-sync.rs"

[[bin]]
name = "p2p-sync-mcp"
path = "src/bin/p2p-sync-mcp.rs"
