[package]
name = "p2p-dir-sync"
version = "0.1.0"
edition = "2024"
description = "P2P directory sync daemon + MCP server"
license = "MIT"

# ------------------------------------------------------------------------
# Iroh 系 crate のバージョン対応表 (2026-05-14 時点で 1.0 rc が出揃ったので
# Phase 1 段階から rc.0 を採用):
#
#   iroh         = 1.0.0-rc.0   (2026-05-07 release)
#   iroh-base    = 1.0.0-rc.0   (2026-05-07 release)
#   iroh-tickets = 1.0.0-rc.0   (2026-05-08 release)
#   iroh-blobs   = 0.101.0      (2026-05-08 release、内部で iroh 1.0.0-rc.0 を要求)
#   iroh-gossip  = 0.99.0       (2026-05-08 release、内部で iroh 1.0.0-rc.0 を要求)
#
# iroh-blobs / iroh-gossip だけ 1.0 rc 番号でないが、これらは iroh 本体の 1.0 rc
# と互換性ある version で release されている (= 番号は揃わないが組み合わせは OK)。
# 後で 1.0 final が出たら全 crate を 1.0.x に揃える upgrade を行う想定。
# ------------------------------------------------------------------------

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
blake3 = "1.8.4"
clap = { version = "4.6.1", features = ["derive"] }
futures-lite = "2.6"
iroh = "1.0.0-rc.0"
iroh-base = "1.0.0-rc.0"
iroh-blobs = "0.101.0"
iroh-gossip = "0.99.0"
iroh-tickets = "1.0.0-rc.0"
notify = "8.2.0"
notify-debouncer-full = "0.7"
rand = "0.10"
# MCP server framework (= bin/p2p-sync-mcp.rs)
rmcp = { version = "1.7", features = ["transport-io"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[[bin]]
name = "p2p-sync"
path = "src/bin/p2p-sync.rs"

[[bin]]
name = "p2p-sync-mcp"
path = "src/bin/p2p-sync-mcp.rs"
