[package]
name = "dirhive"
version = "0.1.0"
edition = "2024"
description = "P2P directory sync daemon + MCP server (= small-circle bilateral invite mesh)"
license = "MIT"
repository = "https://github.com/nakamura-shuta/dirhive"
homepage = "https://github.com/nakamura-shuta/dirhive"

# ------------------------------------------------------------------------
# Iroh 系 crate のバージョン対応表 (2026-06 時点で iroh 1.0 final が出揃った):
#
#   iroh         = 1.0.0     (1.0 final)
#   iroh-base    = 1.0.0     (1.0 final)
#   iroh-tickets = 1.0.0     (1.0 final)
#   iroh-blobs   = 0.103.0   (内部で iroh ^1.0.0 を要求)
#   iroh-gossip  = 0.101.0   (内部で iroh ^1 を要求)
#
# iroh-blobs / iroh-gossip だけ 1.0 番号でないが、これらは iroh 本体の 1.0 final
# と互換性ある version で release されている (= 番号は揃わないが組み合わせは OK)。
# ------------------------------------------------------------------------

[dependencies]
anyhow = "1.0.102"
base32 = "0.5"
base64 = "0.22"
blake3 = "1.8.4"
clap = { version = "4.6.1", features = ["derive"] }
futures-lite = "2.6"
iroh = "1.0.0"
iroh-base = "1.0.0"
iroh-blobs = "0.103.0"
iroh-gossip = "0.101.0"
iroh-tickets = "1.0.0"
notify = "8.2.0"
notify-debouncer-full = "0.7"
rand = "0.10"
# MCP server framework (= bin/dirhive-mcp.rs)
rmcp = { version = "1.7", features = ["transport-io"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
libc = "0.2"
serial_test = "3"

[[bin]]
name = "dirhive"
path = "src/bin/dirhive.rs"

[[bin]]
name = "dirhive-mcp"
path = "src/bin/dirhive-mcp.rs"
